--- a/GPT.ipynb
+++ b/GPT.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "34f605f7-3af3-4983-8938-06e0524552b7",
+   "execution_count": null,
+   "id": "0c9c982b-11b0-44ba-97f2-feb711177d83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "from menu_functions import get_menu\n",
     "import time\n",
-    "from langchain.schema import Document  # Import de la classe Document\n",
+    "from langchain.schema import Document\n",
     "\n",
     "def rag_gpt():\n",
     "    path = \"C:/Users/busch/OneDrive/Documents/Fac/M2/UE1 - Advanced programming and data visualization/Advanced Programming/projet/environment/\"\n",
@@ -34,17 +34,17 @@
     "    \n",
     "    while question != \"Exit\":\n",
     "        if context == True:\n",
-    "            question = input(\"Your question: \")  # Save the question of the user\n",
+    "            question = input(\"Your question: \")\n",
     "        else:\n",
     "            menus = get_menu(question)\n",
-    "            # Traitement du texte brut\n",
+    "            # Raw text processing\n",
     "            text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
     "            splits = text_splitter.split_text(menus)\n",
     "            \n",
-    "            # Transformation des textes en objets Document\n",
+    "            # Transforming text into objects \n",
     "            documents = [Document(page_content=split) for split in splits]\n",
     "            \n",
-    "            # Création du vectorstore\n",
+    "            # Creation of the vectorstore\n",
     "            vectorstore = InMemoryVectorStore.from_documents(\n",
     "                documents=documents, embedding=OpenAIEmbeddings()\n",
     "            )\n",
