--- a/GPT.ipynb
+++ b/GPT.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import time\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.vectorstores import InMemoryVectorStore\n",
     "from langchain_openai import OpenAIEmbeddings\n",
@@ -17,8 +18,7 @@
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "from dotenv import load_dotenv\n",
     "from langchain_community.document_loaders import PyPDFLoader\n",
-    "from menu_functions import get_menu\n",
-    "import time\n",
+    "from menu_functions import get_menu, detect_language, translate_text\n",
     "from langchain.schema import Document\n",
     "\n",
     "def rag_gpt():\n",
@@ -31,10 +31,12 @@
     "    \n",
     "    context = False\n",
     "    question = input(\"Your question: \")\n",
+    "    question_language = detect_language(question)\n",
     "    \n",
     "    while question != \"Exit\":\n",
     "        if context == True:\n",
     "            question = input(\"Your question: \")\n",
+    "            question_language = detect_language(question)\n",
     "        else:\n",
     "            menus = get_menu(question)\n",
     "            # Raw text processing\n",
@@ -57,10 +59,14 @@
     "                \"If i answer you a question about a restaurant and you don't have the contexte of this restaurant, say : 'No context'\" \n",
     "                \"Use the following pieces of retrieved context to answer \"\n",
     "                \"the question. If you don't know the answer, say that you \"\n",
-    "                \"don't know. Use bullet point when it's necessary\"\n",
+    "                \"don't know. Use bullet point when it's necessary.\"\n",
     "                \"\\n\\n\"\n",
     "                \"{context}\"\n",
+    "                \"\\n\"\n",
+    "                \"Translate also the menu in \"\n",
     "            )\n",
+    "            \n",
+    "            system_prompt = translate_text(system_prompt, question_language) + f\"{question_language}\" \n",
     "\n",
     "            prompt = ChatPromptTemplate.from_messages(\n",
     "                [\n",
@@ -89,7 +95,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Your question:  What is the menu at Esplanade for this diner ?\n"
@@ -119,7 +125,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Your question:  Exit\n"
