--- a/scrap/Giallozafferano.ipynb
+++ b/scrap/Giallozafferano.ipynb
@@ -15674,28 +15674,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "8efadfdd-c3e8-42d1-8ed3-6fb7f480568a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# path = \"C:/Users/busch/OneDrive/Documents/Fac/M2/UE1 - Advanced programming and data visualization/Advanced Programming/projet/db/\"\n",
-    "df = pd.read_csv(\"full_translated_data.csv\")"
+    "df = pd.read_csv(\"C:/Users/busch/OneDrive/Documents/Fac/M2/UE1 - Advanced programming and data visualization/Advanced Programming/projet/db/full_translated_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "9e2d4089-aca6-4d1d-b8f7-7624b1e4f106",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop(columns = [\"gluten\", \"shellfish\", \"eggs\", \"peanut\", \"soia\", \"lactose\", \"nut\", \"celery\", \"mustard\", \"sesamo\", \"lupins\", \"Molluschi\"])"
+    "df = df.drop(columns = [\"Lactose\",\"Eggs\",\"Arachides\",\"Gluten\",\"Mustard\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "7bfc0616-d632-4497-9ae2-e3dacf6b7ebe",
    "metadata": {},
    "outputs": [],
@@ -15731,21 +15730,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1cbe0ec7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Allergens defined by the French Ministry of Health\n",
-    "h_lactose = [\"lait\", \"crème\", \"crèmes\", 'yaourt', 'yaourts', 'fromage', 'fromages', 'beurre', 'mozzarella', \"milk\", \"cream\", \"yoghurt\", \"cheese\", \"butter\", \"latte\", \"panna\", \"yogurt\", \"formaggio\", \"burro\"]\n",
-    "h_egg = [\"oeuf\", \"oeufs\", \"uova\", \"uovo\", \"egg\", \"eggs\"]\n",
-    "h_arachide = ['céréales', 'céréale', \"cereali\", \"cereale\", \"cereals\", \"cereal\", 'chili', 'chilis', \"peperoncino\", \"peperoncini\", 'fruits secs', \"frutta secca\", \"dried fruit\", 'chips', \"patatine fritte\", 'amande', 'amandes', \"mandorla\", \"mandorle\", \"almonds\", \"almond\", 'noisette', 'noisettes', \"hazelnut\", \"hazelnuts\", \"nocciola\", \"nocciole\", 'nougat', 'nougats', \"torrone\", \"torroni\", \"torroncini\", 'gâteaux', 'gâteau', \"cakes\", \"cake\", \"torta\", \"dolce\", \"torte\", \"dolci\", 'biscuits', 'biscuit', \"biscotti\", \"biscotto\", 'beignets', 'beignet', \"doughnut\", \"donut\", \"doughnuts\", \"donuts\", \"ciambelle\", \"ciambella\", 'pâtisseries', 'pâtisserie', \"pasticcini\", \"pasticceria\", \"pasticcerie\", \"pasticceria\", \"pastries\", \"pastry\", \"bakery\", 'graines de sésame', 'sesame seeds' , \"sesame seed\", \"semi di sesamo\", 'soja', \"soia\", \"soy\", \"soybean\", \"soybeans\", 'noix', \"nuts\", \"walnuts\", \"walnut\", \"nut\", \"dadi\", 'fruits à coque', \"noccioline\", \"noci\", \"nocciole\"]\n",
-    "h_gluten = ['pain', \"bread\", \"dolore\", 'farine', \"farina\", \"flour\", 'céréales', 'céréale', \"cereali\", \"cereale\", \"cereals\", \"cereal\", 'pâtes', 'pâte', \"pasta\", \"pastas\", 'cracker', 'crackers', 'sandwich', 'sandwichs', 'dessert', 'desserts', \"dolce\", \"dolci\"]\n",
-    "h_mustard = ['moutarde', \"mustard\", \"senape\", \"mostarda\"]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "bc55ddaa",
    "metadata": {},
@@ -15755,7 +15739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "5fd20a9a",
    "metadata": {},
    "outputs": [],
@@ -15860,7 +15844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "1d9a69b9",
    "metadata": {},
    "outputs": [],
@@ -15965,7 +15949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "id": "6eabf409",
    "metadata": {},
    "outputs": [],
@@ -16070,7 +16054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "39258bb3",
    "metadata": {},
    "outputs": [],
@@ -16117,7 +16101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "b50a2ac1",
    "metadata": {},
    "outputs": [],
@@ -16138,7 +16122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "f731f5a3",
    "metadata": {},
    "outputs": [],
@@ -16556,7 +16540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "861f200e",
    "metadata": {},
    "outputs": [
@@ -16564,7 +16548,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\busch\\AppData\\Local\\Temp\\ipykernel_25136\\1078520631.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "C:\\Users\\busch\\AppData\\Local\\Temp\\ipykernel_28184\\1078520631.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
       "  df[colonnes_a_modifier] = df[colonnes_a_modifier].applymap(lambda x: 1 if x >= 1 else 0)\n"
      ]
     }
@@ -16576,13 +16560,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "736f902b",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "scrolled": true
    },
    "outputs": [
@@ -16972,7 +16952,7 @@
        "[6723 rows x 18 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16983,7 +16963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "0e7bb6c7-cbc6-4032-b2db-a6cc63618d90",
    "metadata": {},
    "outputs": [
@@ -17024,13 +17004,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "83ae2cdb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# SAve \n",
-    "df.to_csv(\"full_translated_data.csv\", index=False)"
+    "df.to_csv(\"C:/Users/busch/OneDrive/Documents/Fac/M2/UE1 - Advanced programming and data visualization/Advanced Programming/projet/db/full_translated_data.csv\", index=False)"
    ]
   },
   {
