--- a/GPT.ipynb
+++ b/GPT.ipynb
@@ -32,11 +32,13 @@
     "    context = False\n",
     "    question = input(\"Your question: \")\n",
     "    question_language = detect_language(question)\n",
+    "    question = translate_text(question, \"en\")\n",
     "    \n",
     "    while question != \"Exit\":\n",
     "        if context == True:\n",
     "            question = input(\"Your question: \")\n",
     "            question_language = detect_language(question)\n",
+    "            question = translate_text(question, \"en\")\n",
     "        else:\n",
     "            menus = get_menu(question)\n",
     "            # Raw text processing\n",
@@ -62,12 +64,8 @@
     "                \"don't know. Use bullet point when it's necessary.\"\n",
     "                \"\\n\\n\"\n",
     "                \"{context}\"\n",
-    "                \"\\n\"\n",
-    "                \"Translate also the menu in \"\n",
     "            )\n",
     "            \n",
-    "            system_prompt = translate_text(system_prompt, question_language) + f\"{question_language}\" \n",
-    "\n",
     "            prompt = ChatPromptTemplate.from_messages(\n",
     "                [\n",
     "                    (\"system\", system_prompt),\n",
@@ -85,7 +83,7 @@
     "            if results[\"answer\"] == 'No context.' or results[\"answer\"] == 'No context':\n",
     "                context = False\n",
     "            else:\n",
-    "                print(results[\"answer\"])\n"
+    "                print(translate_text(results[\"answer\"], question_language))\n"
    ]
   },
   {
